fix: use gapped only in card-footer

--- a/scss/components/card.scss
+++ b/scss/components/card.scss
@@ -23,22 +23,14 @@ $card-gap: 1rem !default;
     }
 
     %card-body {
-        @include gapped(0.5rem);
+        @include gapped($card-gap / 2);
     }
 
     %card-footer {
+        @include gapped($card-gap / 2, true);
+
         border-top: $card-border;
-
-        nav ul {
-            @include gapped($card-gap, true);
-
-            display: flex;
-            padding-top: $card-padding;
-            
-            li {
-                list-style: none;
-            }
-        }
+        padding-top: $card-padding / 2;
     }
 
     > header,
